@@ -1,24 +1,24 @@
-3549b0c8a0cdb4389aff17a024aa8461 *DESCRIPTION
-9c6ee33d5843b0c526911e33bb3f8e3a *NAMESPACE
-1584861d5aaf496181f0d657223969ab *NEWS
-5f0f930801b48eb6f9b27eb34e9b4f31 *R/View.R
+d342a33dacce409295dfe5aeef031962 *DESCRIPTION
+9dead2c1529e93f8fb64879f4245db97 *NAMESPACE
+975ce26546654a71451dae7fcaf1f902 *NEWS
+1082ca145a355dde72365e6238b50819 *R/View.R
 075b2df0228ba0e7aafa3783ab5fd0ec *R/autojags.R
 198b41d88f65b07c268a9e9bb6da3ed7 *R/bindmcmc.R
 1e9b152f1dc56fd7284ec27841287990 *R/datacheck.R
 64f00fa2c12eb0cc3a8bf94c7d39ebd7 *R/densityplot.R
-b89a921bbf7e8fc367593879246c5e44 *R/geninits.R
+ce72c4a6a973ff2b35f914f788eb09ae *R/geninits.R
 e8a3e803c56a7c585a438e793cc44923 *R/getdim.R
 9258c48cb57b7954dac1ed2aa7984404 *R/jags.R
 7e9e7d003875fbb5913b4d1460322607 *R/jagsbasic.R
 fc50df0ce284b53608f2a001f5499dd9 *R/orderparams.R
 f7b1dc8b8e7d3d74c6862a6bcc51e52a *R/plot.R
 ac6f0ae941469efd43766f6fac558cf7 *R/populate.R
-bd8ec22208aff51bab89c02557b501ee *R/ppcheck.R
-f5e198e364ad4a1f6027aa204a2dcb34 *R/print.R
-33f3b922354ac0a24ddfcb74b893a057 *R/processinput.R
-9de734388f318248c753c93a8d8d12d4 *R/processoutput.R
+47c0694d67f9a20c21b61e7495ca319e *R/ppcheck.R
+02282581fa679d60e3985d34feccb83b *R/print.R
+e121fcf75cfcdd0d8a05d7fbbea850bc *R/processinput.R
+d6a8e7c2b26133d7d2d106ad8976c7f2 *R/processoutput.R
 60eb181d05dea74f4ae27f7e281b3916 *R/runmodel.R
-331ebfc016717685436ae707844dc96e *R/runparallel.R
+ac80a005bc024ec4de67c503eac8ee07 *R/runparallel.R
 32279dc7a290879ddb543af2073678e0 *R/setfactories.R
 896f8987a003af25077b5a1b8c7a9ec3 *R/setmodules.R
 f9f5097739c06d971428b39831778893 *R/summary.R
@@ -30,11 +30,11 @@ d19bc3d32e4fb3a74f68605ac2e25b73 *R/translateparams.R
 759669ee188ae228c40e1d66ba40508f *R/updatebasic.R
 038e0eae9066b4c27b7dcf37d427729f *R/whiskerplot.R
 901aa3c5fda52e8e5c487f95a028b898 *R/xyplot.R
-90886e1b481fb9740427217f0234f4a6 *man/View.Rd
-b7430c621ab3778fb4e187b53ce4f6c8 *man/autojags.Rd
-3bc43dd8019c660db3ac7ac4be513592 *man/jags.Rd
-f3ebc5b6dc5f368094e8095fd78308fd *man/jagsbasic.Rd
-00141e594a859b467f0c4b30f4d1b8cf *man/ppcheck.Rd
+c8e90a1af6fc3deec176c8ddf1da006c *man/View.Rd
+c66f83269d9ac3ee9f8e3b4e4312b232 *man/autojags.Rd
+26a4e9a9fb25cc38e1a7d50d2f67199d *man/jags.Rd
+d8180ef70e702aadb04ce6c26ff62d21 *man/jagsbasic.Rd
+52ad69f7065c45270f7f7afe272ee863 *man/ppcheck.Rd
 e8352d8d6a92256f4bc324ed5740f737 *man/traceplot.Rd
 fd7272d8ca8e36a8f765a09549ef18da *man/update.Rd
-c31249558a26e7a4cba07435460e425a *man/whiskerplot.Rd
+201c8b0341beed408fd1ac0a00446742 *man/whiskerplot.Rd
