@@ -35,7 +35,9 @@ employed <- longley$Employed
 n <- length(employed)
 data <- list(gnp=gnp,employed=employed,n=n)
 
-#Read in BUGS model file
+#Identify filepath of model file
+modfile <- tempfile()
+
 writeLines("
 model{
 
@@ -54,12 +56,8 @@ model{
   tau <- pow(sigma,-2)
 
 }
-", con="model.txt")
+", con=modfile)
 
-#Identify filepath of model file;
-#in this case in the working directory
-modfile <- 'model.txt'
-  
 #Set parameters to monitor
 params <- c('alpha','beta','sigma','mu')
 
